# m365-update-manager

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  Makefile  QUICKSTART.md  README.md  azure_storage.py  check_updates.py  manifest.json  promote.py  pyproject.toml  requirements.txt
src/: .gitignore  __init__.py  azure_storage.py  check_updates.py  config.py  manifest.py  mau_client.py  promote.py
tests/: conftest.py  test_config.py  test_manifest.py
workflows-wip/.github/workflows/: check-updates.yml  ci.yml  promote-updates.yml
